<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="hello">Hello World, rhestr!</string>
    <string name="app_name">Rhybudd</string>
    <string name="Description">Rhybudd is a Zenoss Events and Device Management App for Android Uses the new Zenoss 3.0 API to poll for, alert on and Acknowledge or delve into Zenoss alerts.</string>
    <string name="widget_GraphTitle">Current Event Counts</string>
    <string name="AddtoLogButton">Add to Log</string>
    <string name="DefaultStatusMessageText">Refreshing..</string>
    <string name="deviceListTitle">Infrastructure</string>
    <string name="eventListTitle">Events List</string>
    <string name="DrawerTitle">Additional Rhybudd Functions</string>
    <string name="productionStateNotificationLabel">Only raise alerts for Production devices</string>
    <string name="notificationSoundLabel">Notification Sound</string>
    <string name="initialSettings">Additional configuration such as background polling interval etc can be configured later</string>
    <string name="FirstRunTitle">Configure Rhybudd Settings</string>
    <string name="FirstRunSubtitle">Supports Zenoss 3.x, 4.x &amp; ZaaS</string>
    <string name="FirstRunNeedSettings">To operate Rhybudd needs a Zenoss URL and credentials.\nExiting</string>
    <string name="FirstRunZenossCore">Zenoss Core Community / Ent</string>
    <string name="FirstRunZaaS">Zenoss as a Service [ZaaS]</string>
    <string name="FirstRunPush">[Optional]\nRhybudd Push</string>
    <string name="FirstRunDebug">Debug Output:</string>
    <string name="SettingsTitle">Rhybudd Settings</string>
    <string name="SettingsSubTitle">See http://wiki.zenoss.org/Android for help</string>
    <string name="testtest">test test test \ntest2 test2 test2</string>
    <string name="PushCategoryTitle">Rhybudd Push Settings</string>
    <string name="PushSubtitle">Near instant alert delivery</string>
    <string name="PushCategorySummary">Rhybudd Push is a ZenPack powered feature that enables Zenoss to push Events directly to your device without the need for polling.\n\nSee http://bit.ly/ZenossPush for more details.</string>
    <string name="PushEnableSwitch">Enable Push</string>
    <string name="PushIDDesc">This is your Push key for use with the ZenPack.rhybudd.alerts ZenPack.\n\nThis key has been saved to this device, you\'re ready to start receiving pushed events!</string>
    <string name="PushAddExistingButton">Existing Key</string>
    <string name="PushCreateIDButton">Get New Key</string>
    <string name="PushSaveID">Save &amp; Exit</string>
    <string name="PushExit">Exit</string>
    <string name="PushKeyHint">Filter e.g. "Critical"</string>
    <string name="PushKeyLengthError">Push keys are 32 characters long</string>
    <string name="PushRegisterZenpack">Register with ZenPack</string>
    <string name="PushCheckZenpack">Check ZenPack is Installed</string>
    <string name="PushZPStatusLabel">ZenPack Installed</string>
    <string name="PushZPDevRegStatus">Registered with ZenPack</string>
    <string name="PushZPErrorNoZP">The ZenPacks.rhybudd.alerts ZenPack is not installed on your Server. Please install the ZenPack then try again.</string>
    <string name="PushZPNoHost">It appears there was an issue resolving the Zenoss Host name (this is not guaranteed to be the exact error)</string>
    <string name="PushVersion">Version</string>
    <string name="PushEnable">Enable</string>
    <string name="mangeDatabaseTitle">Manage Cache</string>
    <string name="mangeDatabaseDBSizeTitle">Current DB Size:</string>
    <string name="manageCache_RefreshTitle">Refresh Local Cache</string>
    <string name="refreshDesc">The cache is refreshed each time the app loads so there is no need to force a refresh.</string>
    <string name="manageCache_moveToSDTitle">Move App to SD Card</string>
    <string name="moveToSDDesc">Depending on the size of your infrastructure this cache can get quite large. Moving to SD is advisable.</string>
    <string name="manageCache_emptyCacheTitle">Empty Local Cache</string>
    <string name="emptyCacheDesc">The local cache is emptied each time the app loads but you can flush it manually if required.</string>
    <string name="homeMenu_Help">Help</string>
    <string name="homeMenu_PagerDuty">Pager Duty</string>
    <string name="homeMenu_ManageDB">Manage Database</string>
    <string name="homeMenu_Infrastructure">Infrastructure</string>
    <string name="homeMenu_Settings">Settings</string>
    <string name="homeMenu_Refresh">Refresh</string>
    <string name="searchTitle">Search Results</string>
    <string name="searchStatus">Searching..</string>
    <string name="searchHint">Search Terms</string>
    <string name="searchButton">Search</string>
    <string name="searchLabel">Search</string>
    <string name="searchHintDevice">Device Name</string>
    <string name="searchVoicePromptDevice">For best results use a short single word such as the device name.</string>
    <string name="deviceIDLabel">Device ID</string>
    <string name="uptimeLabel">Uptime</string>
    <string name="uptimeLabelUnknown">Uptime: Unknown</string>
    <string name="deviceDetailsLastChange">Last Change</string>
    <string name="deviceDetailsModelTime">Model Time</string>
    <string name="deviceDetailsLastCollected">Last Collected: Unknown</string>
    <string name="deviceDetailsMemorySwap">Memory / Swap</string>
    <string name="deviceDetailsTitle">Device Details</string>
    <string name="deviceDetailsOSModelLabel">OS Modeling:</string>
    <string name="deviceDetailsGroupsLabel">Groups:</string>
    <string name="deviceDetailsSystemsLabel">Systems:</string>
    <string name="deviceDetailsUptimeLabel">Uptime:</string>
    <string name="deviceDetailsProductionStateLabel">Production State:</string>
    <string name="empty"></string>
    <string name="deviceDetailsSNMPLocation">SNMP Location</string>
    <string name="deviceDetailsSNMPContact">SNMP Contact</string>
    <string name="deviceDetailsEventsTitle">Events</string>
    <string name="deviceDetailsSNMPAgent">SNMP Agent</string>
    <string name="EventListWelcomeTitle">Events Dashboard</string>
    <string name="EventListWelcomeIntro">The tablet dashboard enables you to interact with your events in several ways.\n\nThe action bar allows you to acknowledge all open events, escalate the details or run a manual refresh.\n\nTapping an event on the left will load the event into this pane. From there you can tap the status icon (a gray circle or green tick) to acknowledge the event and see further details. If the event message contains a html img tag it\'ll be rendered at the top.</string>
    <string name="eventDetailsTitle">Event Details</string>
    <string name="eventDetailsComponentLabel">Component:</string>
    <string name="eventDetailsEventClassLabel">Event Class:</string>
    <string name="eventDetailsSummaryLabel">Summary:</string>
    <string name="eventDetailsFirstSeenLabel">First Seen:</string>
    <string name="eventDetailslastSeenLabel">Last Seen:</string>
    <string name="Acknowledge">Acknowledge</string>
    <string name="eventDetailsEventCountLabel">Event Count:</string>
    <string name="eventDetailsAgentLabel">Agent:</string>
    <string name="eventDetailsLogLabel">Log:</string>
    <string name="eventDetailsTitlePlaceholder">Getting event details...</string>
    <string name="deviceListServerCount">Calculating server count&#8230;</string>
    <string name="deviceListIconDesc">Image depicting 3 servers on a network</string>
    <string name="ViewDeviceActivitySubtitle">Swipe to see other devices</string>
    <string name="DeviceListWelcomeTitle">Infrastructure List</string>
    <string name="DeviceListWelcome">The Infrastructure List shows all devices currently modelled by Zenoss, their current Alert counts (at last sync), Production State, IP address and Operating system.\n\nSelect a device to see more details including Graphs and SNMP data.</string>
    <string name="mgeDBRefreshDesc">Image depicting the refreshing of the local cache</string>
    <string name="mgeDBSDCard">Image depicting an SD card</string>
    <string name="mgeDBBin">Image depicting a bin being filled</string>
    <string name="homeLogos">Image showing the Zenoss and Android logos</string>
    <string-array name="actionbar_nav">
        <item>Devices</item>
        <item>Search</item>
        <item>Reports</item>
    </string-array>
    <string name="SaveSettingsButton">Save Settings &amp; Login</string>
    <string name="UserNameHint">Zenoss User Name</string>
    <string name="PasswordHint">Zenoss Password</string>
    <string name="EnableHTTPAuthCheck">Enable HTTP Basic Auth</string>
    <string name="HTTPAuthUserNameHint">HTTP Basic Auth User</string>
    <string name="HTTPAuthPasswordHint">HTTP Basic Auth Password</string>
    <string-array name="BackgroundServiceDelay_preference">
        <item>30 Seconds</item>
        <item>1 Minute</item>
        <item>2 Minutes</item>
        <item>5 Minutes</item>
        <item>10 Minutes</item>
        <item>15 Minutes</item>
        <item>30 Minutes</item>
        <item>1 Hour</item>
    </string-array>
    <string-array name="BackgroundServiceDelay_preference_values">
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>360</item>
        <item>600</item>
        <item>900</item>
        <item>1800</item>
        <item>3600</item>
    </string-array>
    <string-array name="drawer_array">
        <item>Infrastructure</item>
        <item>Manage Database</item>
        <item>View Groups</item>
        <item>Settings</item>
        <item>Configure Rhybudd Push</item>
        <item>Help</item>
        <item>Feedback</item>
        <item>Search</item>
        <item>Diagnostic Tool</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="AddDeviceTitle">Add a Device to Zenoss</string>
    <string name="AddDeviceButton">Add Device</string>
    <string name="CancelButton">Cancel</string>
    <string name="AddDeviceFQDNHint">FQDN or IP</string>
    <string name="AddDeviceTitleHint">Title</string>
    <string-array name="device_class">
        <item>/</item>
        <item>/Discovered</item>
        <item>/KVM</item>
        <item>/Network</item>
        <item>/Network/Cisco</item>
        <item>/Network/Router</item>
        <item>/Network/Router/Cisco</item>
        <item>/Network/Router/Firewall</item>
        <item>/Network/Router/RSM</item>
        <item>/Network/Router/TerminalServer</item>
        <item>/Network/Switch</item>
        <item>/Ping</item>
        <item>/Power</item>
        <item>/Power/UPS</item>
        <item>/Power/UPS/APC</item>
        <item>/Printer</item>
        <item>/Printer/InkJet</item>
        <item>/Printer/Laser</item>
        <item>/Server</item>
        <item>/Server/Cmd</item>
        <item>/Server/Darwin</item>
        <item>/Server/Linux</item>
        <item>/Server/Remote</item>
        <item>/Server/Scan</item>
        <item>/Server/Solaris</item>
        <item>/Server/SSH</item>
        <item>/Server/SSH/Linux</item>
        <item>/Server/Windows</item>
        <item>/Server/Windows/WMI</item>
        <item>/Storage</item>
        <item>/VMware</item>
    </string-array>
    <string-array name="production_state">
        <item>Production</item>
        <item>Pre-Production</item>
        <item>Test</item>
        <item>Maintenance</item>
        <item>Decommissioned</item>
    </string-array>
    <string-array name="device_priority">
        <item>Normal</item>
        <item>Highest</item>
        <item>High</item>
        <item>Low</item>
        <item>Lowest</item>
        <item>Trivial</item>
    </string-array>
    <string name="NFCTitle">NFC + Rhybudd = Zenoss info by tapping a tag</string>
</resources>