<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/PushCategorySummary"
        android:id="@+id/pushSummary"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:padding="12dp"
        android:layout_marginBottom="4dp"
        android:autoLink="web"
        android:textColorLink="@color/LightBlue"/>






    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pushKeyEditText"
        android:lines="1"
        android:typeface="monospace"
        android:gravity="center_horizontal"
        android:layout_below="@+id/pushSummary"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:visibility="invisible"
        android:hint="@string/PushKeyHint"
        android:layout_marginLeft="@dimen/SettingsPushETMargin"
        android:layout_marginRight="@dimen/SettingsPushETMargin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/PushIDDesc"
        android:id="@+id/pushIDDesc"
        android:layout_below="@+id/pushKeyEditText"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:visibility="invisible"
        android:autoLink="web"
        android:paddingLeft="@dimen/SettingEditPadding"
        android:paddingRight="@dimen/SettingEditPadding"
        android:layout_marginTop="@dimen/SettingsMargin"/>



    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_alignTop="@+id/pushKeyEditText"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>



    <LinearLayout style="?android:buttonBarStyle"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_alignParentBottom="true">
        <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/PushAddExistingButton"
                android:id="@+id/setPushIDButton"
                android:layout_marginLeft="@dimen/SettingsTopMargin"
                android:layout_below="@+id/pushSummary"
                style="?android:buttonBarButtonStyle"/>

        <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/PushCreateIDButton"
                android:id="@+id/GenerateNewIDButton"
                style="?android:buttonBarButtonStyle"/>


        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/PushSaveID"
                android:id="@+id/exitButton"
                style="?android:buttonBarButtonStyle"
                android:visibility="visible"/>
            </LinearLayout>
</RelativeLayout>