<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/EventListFragmentMargins"
                android:paddingRight="@dimen/EventListFragmentMargins">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/PushCategorySummary"
            android:id="@+id/pushSummary"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:padding="12dp"
            android:layout_marginBottom="4dp"
            android:autoLink="web"
            android:textColorLink="@color/LightBlue"/>






    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pushFilterEditText"
            android:lines="1"
            android:typeface="monospace"
            android:gravity="center_horizontal"
            android:visibility="visible"
            android:hint="@string/PushKeyHint"
            android:layout_marginTop="18dp"
            android:layout_below="@+id/WarningTextView"
            android:layout_alignRight="@+id/PushEnabledSwitch"
            android:layout_alignLeft="@+id/WarningTextView"/>


    <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_centerInParent="true"/>



    <LinearLayout style="?android:buttonBarStyle"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_alignParentBottom="true"
                  android:id="@+id/linearLayout">

        <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/PushCheckZenpack"
                android:id="@+id/CheckButton"
                style="?android:buttonBarButtonStyle"
                android:visibility="gone"/>

        <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/PushExit"
                android:id="@+id/ExitButton"
                style="?android:buttonBarButtonStyle"
                android:visibility="gone"/>

        <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/PushRegisterZenpack"
                android:id="@+id/RegisterButton"
                style="?android:buttonBarButtonStyle"
                android:enabled="false"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pushSummary"
        android:layout_centerHorizontal="true"
        android:id="@+id/ZenPackStatusContainer"
        android:layout_marginLeft="@dimen/SettingsMargin"
        android:layout_marginRight="@dimen/SettingsTopMargin"
        android:gravity="center_vertical|right">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/PushZPStatusLabel"
            android:id="@+id/ZenPackLabel"
            android:layout_marginRight="30dp"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ZPInstalledStatusImg"
            android:focusableInTouchMode="false"
            android:src="@drawable/ic_unacknowledged"/>
</LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ZenPackStatusContainer"
        android:layout_centerHorizontal="true"
        android:id="@+id/ZenPackDevRegStatusContainer"
        android:layout_marginLeft="@dimen/SettingsMargin"
        android:layout_marginRight="@dimen/SettingsTopMargin"
        android:gravity="center_vertical|right"
        android:layout_marginTop="@dimen/SettingsMargin">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/PushZPDevRegStatus"
            android:id="@+id/ZenPackDevRegLabel"
            android:layout_marginRight="30dp"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ZPDevRegStatusImg"
            android:focusableInTouchMode="false"
            android:src="@drawable/ic_unacknowledged"/>
</LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ZenPackDevRegStatusContainer"
            android:layout_centerHorizontal="true"
            android:id="@+id/ZenPackVersionContainer"
            android:layout_marginLeft="@dimen/SettingsMargin"
            android:layout_marginRight="@dimen/SettingsTopMargin"
            android:gravity="center_vertical|right"
            android:layout_marginTop="@dimen/SettingsMargin">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/PushVersion"
                android:id="@+id/ZenPackVersionLabel"
                android:layout_marginRight="30dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="00"
                android:id="@+id/ZenPackVersion"/>
    </LinearLayout>

    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PushEnable"
            android:id="@+id/PushEnabledSwitch"
            android:layout_below="@+id/ZenPackVersionContainer"
            android:layout_alignRight="@+id/ZenPackVersionContainer"
            android:layout_marginTop="@dimen/SettingsTopMargin"
            android:enabled="false"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/PushZPErrorNoZP"
            android:id="@+id/WarningTextView"
            android:layout_below="@+id/PushEnabledSwitch"
            android:textColor="@color/WarningRed"
            android:layout_alignRight="@+id/PushEnabledSwitch"
            android:layout_alignLeft="@+id/ZenPackVersionContainer"
            android:layout_marginTop="@dimen/SettingsMargin"
            android:gravity="center_horizontal"
            android:visibility="invisible"/>

</RelativeLayout>