<ScrollView android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        xmlns:android="http://schemas.android.com/apk/res/android">



        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fadeScrollbars="true"
            android:fadingEdge="vertical"
            android:isScrollContainer="true"
            android:scrollbars="vertical" >

            <EditText
                android:id="@+id/ZenossURL"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/SettingsMargin"
                android:layout_marginRight="@dimen/SettingsMargin"
                android:layout_marginTop="@dimen/SettingsMargin"
                android:hint="http://zenoss.url:8080"
                android:inputType="textUri" >

                <requestFocus>
                </requestFocus>
            </EditText>


            <EditText
                android:id="@+id/ZenossUserName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ZenossURL"
                android:layout_marginLeft="@dimen/SettingsMargin"
                android:layout_marginRight="@dimen/SettingsMargin"
                android:layout_marginTop="@dimen/SettingsMargin"
                android:hint="@string/UserNameHint"
                android:inputType="textPersonName" >

            </EditText>


            <EditText
                android:id="@+id/ZenossPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ZenossUserName"
                android:layout_marginLeft="@dimen/SettingsMargin"
                android:layout_marginRight="@dimen/SettingsMargin"
                android:hint="@string/PasswordHint"
                android:inputType="textPassword" >

            </EditText>

            <TextView
                android:id="@+id/settingsDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ZenossPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/SettingsMargin"
                android:layout_marginRight="@dimen/SettingsMargin"
                android:layout_marginTop="@dimen/SettingsTopMargin"
                android:gravity="center_horizontal"
                android:text="@string/initialSettings"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:id="@+id/divider1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:layout_below="@+id/settingsDesc"
                android:layout_centerHorizontal="true"
                android:paddingBottom="2dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="2dp"
                android:scaleType="fitXY"
                android:src="@android:drawable/divider_horizontal_dark" /><Button
            android:id="@+id/SaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_below="@+id/basicAuthPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/SettingsTopMargin"
            android:text="@string/SaveSettingsButton"
            style="@style/ButtonText"
            android:background="@drawable/light_blue_button"/>




            <CheckBox
                android:id="@+id/basicAuthCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/settingsDesc"
                android:layout_below="@+id/divider1"
                android:text="@string/EnableHTTPAuthCheck" />










            <EditText
                android:id="@+id/basicAuthUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/ZenossPassword"
                android:layout_alignRight="@+id/ZenossPassword"
                android:layout_below="@+id/basicAuthCheckBox"
                android:ems="10"
                android:hint="@string/HTTPAuthUserNameHint"
                android:inputType="textNoSuggestions" />








            <EditText
                android:id="@+id/basicAuthPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/basicAuthUser"
                android:layout_alignRight="@+id/basicAuthUser"
                android:layout_below="@+id/basicAuthUser"
                android:layout_marginTop="@dimen/SettingsMargin"
                android:ems="10"
                android:hint="@string/HTTPAuthPasswordHint"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/FirstRunDebug"
                android:id="@+id/debugLabel"
                android:layout_below="@+id/SaveButton"
                android:layout_marginTop="@dimen/SettingsTopMargin"
                android:layout_alignLeft="@+id/ZenossURL"
                android:visibility="invisible"/>

            <EditText
                android:id="@+id/debugOutput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/SettingsMargin"
                android:paddingTop="@dimen/SettingsMargin"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/WarningRed"
                android:layout_alignParentBottom="false"
                android:layout_alignRight="@+id/basicAuthPassword"
                android:layout_alignLeft="@+id/basicAuthPassword"
                android:layout_below="@+id/debugLabel"
                android:typeface="monospace"
                android:textIsSelectable="false"
                android:minLines="2"
                android:visibility="invisible"/>

        </RelativeLayout>
    
    </ScrollView>
